--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-06  Logan O'Sullivan Bruns  <logan@gedanken.org>
+
+	* SFEhbase.spec: bumped to 0.94.1 and removed a no longer needed patch.
+
 2012-09-30 Milan Jurik <sfnet@xylab.cz>
 
 	* SFEproftpd.spec: bump to 1.3.3g
