--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-15 Ken Mays  <kmays2000@gmail.com>
+
+	* SFEimagemagick.spec: bump to 6.7.8-10
+
 2012-10-08 Ken Mays  <kmays2000@gmail.com>
 
 	* SFEsamba4.spec: bump to 4.0.0rc2
