SFEgraphicsmagick.spec: bump to 1.3.17
git-svn-id: http://pkgbuild.svn.sourceforge.net/svnroot/pkgbuild/spec-files-extra/trunk@4979 3354ce84-6216-0410-ad3d-afc617165c18

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-10-15 Ken Mays  <kmays2000@gmail.com>
 
 	* SFEimagemagick.spec: bump to 6.7.8-10
+	* SFEgraphicsmagick.spec: bump to 1.3.17
 
 2012-10-08 Ken Mays  <kmays2000@gmail.com>
 
