--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* SFEimagemagick.spec: bump to 6.7.8-10
 	* SFEgraphicsmagick.spec: bump to 1.3.17
+	* SFEinkscape.spec: bump to 0.48.3.1
 
 2012-10-08 Ken Mays  <kmays2000@gmail.com>
 
