--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-25  Logan O'Sullivan Bruns  <logan@gedanken.org>
+
+	* SFEgit.spec: bump to 1.8.0 and updated a patch.
+	* patches/git-03-xmlto.diff
+
 2012-10-25 Ken Mays  <kmays2000@gmail.com>
 
 	* SFEimagemagick.spec: bump to 6.7.9-10
