--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-26  Logan O'Sullivan Bruns  <logan@gedanken.org>
+
+	* base-specs/lapack.spec: bump to 3.4.2
+
 2012-10-25  Logan O'Sullivan Bruns  <logan@gedanken.org>
 
 	* SFEgit.spec: bump to 1.8.0 and updated a patch.
