--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-29  Logan O'Sullivan Bruns  <logan@gedanken.org>
+
+	* SFEatlas.spec: bump to 3.10.0, include lapack at build time only
+	and add shared libraries.
+
 2012-10-26  Logan O'Sullivan Bruns  <logan@gedanken.org>
 
 	* base-specs/lapack.spec: bump to 3.4.2
