SFEr-atlas.spec: bump to 2.15.1, update depends, permissions and use shared atlas.
git-svn-id: http://pkgbuild.svn.sourceforge.net/svnroot/pkgbuild/spec-files-extra/trunk@4999 3354ce84-6216-0410-ad3d-afc617165c18

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-29  Logan O'Sullivan Bruns  <logan@gedanken.org>
 
+	* SFEr-atlas.spec: bump to 2.15.1, update depends, permissions and
+	use shared atlas.
+
 	* SFEatlas.spec: bump to 3.10.0, include lapack at build time only
 	and add shared libraries.
 
