SFEc-icap.spec: bump to 0.2.2
git-svn-id: http://pkgbuild.svn.sourceforge.net/svnroot/pkgbuild/spec-files-extra/trunk@5000 3354ce84-6216-0410-ad3d-afc617165c18

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-30 Milan Jurik <sfnet@xylab.cz>
+
+	* SFEc-icap.spec: bump to 0.2.2
+
 2012-10-29  Logan O'Sullivan Bruns  <logan@gedanken.org>
 
 	* SFEr-atlas.spec: bump to 2.15.1, update depends, permissions and
