Samba4: bumped to 4.0.0rc4 in experimental
git-svn-id: http://pkgbuild.svn.sourceforge.net/svnroot/pkgbuild/spec-files-extra/trunk@5004 3354ce84-6216-0410-ad3d-afc617165c18

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-30 Ken Mays  <kmays2000@gmail.com>
+
+	* experimental/SFEsamba4.spec: bump to 4.0.0rc4
+
 2012-10-30 Milan Jurik <sfnet@xylab.cz>
 
 	* SFEc-icap.spec: bump to 0.2.2
